--- a/VICXML/.classpath
+++ b/VICXML/.classpath
@@ -2,10 +2,10 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
-	<classpathentry kind="lib" path="C:/VSF-JAVA/Librerias/jaxb-ri/lib/jaxb-api.jar"/>
-	<classpathentry kind="lib" path="C:/VSF-JAVA/Librerias/jaxb-ri/lib/jaxb-core.jar"/>
-	<classpathentry kind="lib" path="C:/VSF-JAVA/Librerias/jaxb-ri/lib/jaxb-impl.jar"/>
-	<classpathentry kind="lib" path="C:/VSF-JAVA/Librerias/jaxb-ri/lib/jaxb-jxc.jar"/>
-	<classpathentry kind="lib" path="C:/VSF-JAVA/Librerias/jaxb-ri/lib/jaxb-xjc.jar"/>
+	<classpathentry kind="lib" path="D:/TERADATA/CFP-JAVA/jaxb-ri-2.2.11/jaxb-ri/lib/jaxb-api.jar"/>
+	<classpathentry kind="lib" path="D:/TERADATA/CFP-JAVA/jaxb-ri-2.2.11/jaxb-ri/lib/jaxb-core.jar"/>
+	<classpathentry kind="lib" path="D:/TERADATA/CFP-JAVA/jaxb-ri-2.2.11/jaxb-ri/lib/jaxb-impl.jar"/>
+	<classpathentry kind="lib" path="D:/TERADATA/CFP-JAVA/jaxb-ri-2.2.11/jaxb-ri/lib/jaxb-jxc.jar"/>
+	<classpathentry kind="lib" path="D:/TERADATA/CFP-JAVA/jaxb-ri-2.2.11/jaxb-ri/lib/jaxb-xjc.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
